--- a/index.html
+++ b/index.html
@@ -9,16 +9,156 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/estilosHome.css">
-    </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+</head>
 
 <body>
 
-    <header></header>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">
+                    The barber SHOP
+                    <i class="bi bi-scissors"></i>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre nosotros</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </header>
     <main>
         <section class="banner text-white fw-bold">
-           <h1>THE BARBER SHOP</h1>
+            <h1>THE BARBER SHOP</h1>
         </section>
-        
+        <section>
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <img src="./img/servicio1.webp" alt="foto1" class="img-fluid w-100">
+
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <img src="./img/servicio2.png" alt="foto1" class="img-fluid w-100">
+
+                    </div>
+                    <div class="col-12 col-md-4" height="100px">
+                        <img src="./img/servicio3.png" alt="foto1" class="img-fluid w-100">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container my-5">
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col">
+
+                        <div class="card h-100 shadow">
+
+                            <h1 class="text-center">cortes de pelo modernos</h1>
+                            <img src="./img/servicio1.webp" alt="foto1" class="img-fluid w-100">
+
+                        </div>
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <section class="banner2">
+
+        </section>
+        <section>
+            <div class="container mt-3">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-5 align-self-center">
+                        <form>
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">
+                                            <i class="bi bi-person-circle"></i>
+                                        </span>
+                                        <input type="text" class="form-control" placeholder="usuario">
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">
+                                            <i class="bi bi-envelope-fill"></i>
+                                        </span>
+                                        <input type="text" class="form-control" placeholder="correo">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">
+                                            <i class="bi bi-telephone-fill"></i>
+                                        </span>
+                                        <input type="text" class="form-control" placeholder="telefono" aria-label="Username" aria-describedby="basic-addon1">
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">
+                                            <i class="bi bi-calendar-event-fill"></i>
+                                        </span>
+                                        <input type="date" class="form-control" placeholder="fecha" aria-label="Username" aria-describedby="basic-addon1">
+                                    </div>
+
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">
+                                            <i class="bi bi-clock-fill"></i>
+                                        </span>
+                                        <select class="form-select" aria-label="Default select example">
+                                            <option selected>Open this select menu</option>
+                                            <option value="1">One</option>
+                                            <option value="2">Two</option>
+                                            <option value="3">Three</option>
+                                          </select>
+                                      </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-12 col-md-3 text-center">
+                        <h3>REGISTRA TU CITA</h3>
+                        <p>SOMOS LOS MEJORES.....</p>
+                        <img src="./img/logo.png" alt="foto" class="img-fluid w-100">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 
