--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         <span class="input-group-text" id="basic-addon1">
                                             <i class="bi bi-person-circle"></i>
                                         </span>
-                                        <input type="text" class="form-control" placeholder="usuario">
+                                        <input type="text" class="form-control" placeholder= "usuario" id = "usuario">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-6">
@@ -111,7 +111,7 @@
                                         <span class="input-group-text" id="basic-addon1">
                                             <i class="bi bi-envelope-fill"></i>
                                         </span>
-                                        <input type="text" class="form-control" placeholder="correo">
+                                        <input type="text" class="form-control" placeholder="correo" id = "correo">
                                     </div>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                         <span class="input-group-text" id="basic-addon1">
                                             <i class="bi bi-telephone-fill"></i>
                                         </span>
-                                        <input type="text" class="form-control" placeholder="telefono" aria-label="Username" aria-describedby="basic-addon1">
+                                        <input type="text" class="form-control" placeholder="telefono" aria-label="Username" aria-describedby="basic-addon1" id = "telefono">
                                       </div>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
                                         <span class="input-group-text" id="basic-addon1">
                                             <i class="bi bi-calendar-event-fill"></i>
                                         </span>
-                                        <input type="date" class="form-control" placeholder="fecha" aria-label="Username" aria-describedby="basic-addon1">
+                                        <input type="date" class="form-control" placeholder="fecha" aria-label="Username" aria-describedby="basic-addon1" id = "fecha">
                                     </div>
 
                                 </div>
@@ -140,15 +140,16 @@
                                         <span class="input-group-text" id="basic-addon1">
                                             <i class="bi bi-clock-fill"></i>
                                         </span>
-                                        <select class="form-select" aria-label="Default select example">
-                                            <option selected>Open this select menu</option>
-                                            <option value="1">One</option>
-                                            <option value="2">Two</option>
-                                            <option value="3">Three</option>
+                                        <select class="form-select" aria-label="Default select example" id = "hora">
+                                            <option selected>seleccione una hora</option>
+                                            <option value="1">6:30</option>
+                                            <option value="2">7:00</option>
+                                            <option value="3">7:30</option>
                                           </select>
                                       </div>
                                 </div>
                             </div>
+                            <button type="submit" class="btn btn-dark w-100" id = "botonagenda">Agendar</button>
                         </form>
                     </div>
                     <div class="col-12 col-md-3 text-center">
@@ -165,6 +166,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+        <script src="./controllers/validador.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 
 </html>
